<resources>
    <string name="app_name">Calculator</string>
    <string name="_zero">0</string>
    <string name="clear">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="_seven">7</string>
    <string name="_eight">8</string>
    <string name="_nine">9</string>
    <string name="multiplication">X</string>
    <string name="_four">4</string>
    <string name="_five">5</string>
    <string name="_six">6</string>
    <string name="subtract">-</string>
    <string name="_one">1</string>
    <string name="_two">2</string>
    <string name="_three">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current policies</string>
    <string name="export_as_csv">Export as CSV</string>
</resources>