<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <FrameLayout
        app:layout_constraintBottom_toTopOf="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/text_view"
            android:layout_marginHorizontal="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_zero"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:layout_gravity="end|bottom"/>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:text="@string/clear"
                style="@style/Light.Gray.Button"
                android:id="@+id/clear"
                android:onClick="onNumberClick"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/plus_minus"
                style="@style/Light.Gray.Button"
                android:layout_marginHorizontal="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/percentage"
                style="@style/Light.Gray.Button"
                android:layout_marginEnd="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/division"
                android:id="@+id/btn_division"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:text="@string/_seven"
                android:id="@+id/btn_7"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/_eight"
                android:id="@+id/btn_8"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/_nine"
                android:id="@+id/btn_9"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:layout_marginEnd="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/multiplication"
                android:id="@+id/btn_multiplication"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:text="@string/_four"
                android:id="@+id/btn_4"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/_five"
                android:id="@+id/btn_5"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/_six"
                android:id="@+id/btn_6"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:layout_marginEnd="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/subtract"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:text="@string/_one"
                android:id="@+id/btn_1"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/_two"
                android:id="@+id/btn_2"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/_three"
                android:id="@+id/btn_3"
                android:onClick="onNumberClick"
                style="@style/Gray.Button"
                android:layout_marginEnd="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/add"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:text="@string/_0"
                android:id="@+id/btn_0"
                android:onClick="onNumberClick"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:layout_width="176dp"
                style="@style/Gray.Button"
                android:paddingEnd="0dp" />
            <com.google.android.material.button.MaterialButton
                android:text="@string/dot"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="12dp"/>
            <com.google.android.material.button.MaterialButton
                android:text="@string/equal"
                android:id="@+id/equal"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"/>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>