<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity2">
    <LinearLayout
        android:id="@+id/nav"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="15dp"
        android:orientation="horizontal"
        android:background="@color/gray_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginStart="15dp"
            android:src="@drawable/img_1"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <ImageView
            android:layout_marginHorizontal="130dp"
            android:src="@drawable/img"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <ImageView
            android:layout_marginEnd="15dp"
            android:src="@drawable/img_2"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/nav"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_marginVertical="36dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policies"
            android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/policy"
            style="@style/Main.Button"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/product_category"
            style="@style/Main.Button"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:text="@string/origin_country"
            android:textAllCaps="false"
            style="@style/Main.Button"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textAllCaps="false"
            style="@style/Main.Button"/>
        <TextView
            android:layout_marginTop="36dp"
            android:layout_marginBottom="14sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/current_policies"
            android:textSize="34sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/result"
            android:onClick="onClickExit"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/export_as_csv"
            style="@style/End.Button"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>